# d3d12-tutorial

./: .gitignore  LICENSE  README.md
hello_triangle/: Cargo.toml  README.md
hello_triangle/bindings/: Cargo.toml  build.rs
hello_triangle/shaders/: PixelShader.hlsl  VertexShader.hlsl
hello_triangle/src/: d3d.rs  main.rs  util.rs  win.rs
