[package]
name = "create_window_bindings"
version = "0.1.0"
authors = ["Hajime-san <utd.c.r.d.s.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }

[build-dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }
